force-app/main/default/objects/Ledger_Line__c/Ledger_Line__c.object-meta.xml
<CustomObject>
    <label>Ledger Line</label>
    <nameField>
        <displayFormat>L#{0000000000}</displayFormat>
        <label>Ledger #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>