force-app/main/default/objects/Ledger_Line__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <label>Ledger</label>
    <referenceTo>Ledger__c</referenceTo>
    <relationshipLabel>Ledger Lines</relationshipLabel>
    <relationshipName>Ledger_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>