force-app/main/default/objects/Ledger_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Ledger__c</columns>
    <columns>Journal__c</columns>
    <columns>Reference__c</columns>
    <columns>Credit_Debit__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>